<resources>
    <string name="app_name">Money Management</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_dob">mm/dd/yyyy</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="ime_next">Next</string>

    <!--Stirngs related to G+ Login Button-->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_forgot_pass">Forgot Password</string>
    <string name="pick_date">mm/DD/YYYY</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password</string>
    <!--Stirngs related to G+ Login Button-->

</resources>
